# Ferari

./: .clippy.toml  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  input.json  input_homka.json
.github/workflows/: ci.yml
assets/entities/: atlas.json
assets/tiles/: atlas.json
demo/: Cargo.toml
demo/src/: behaviour.rs  initiator.rs  main.rs  mod.rs
examples/: demo_map_10000.json  demo_map_500.json  demo_map_5000.json  mobgen.py
src/: Cargo.toml  draw.rs  input.rs  lib.rs  main.rs  mod.rs  time.rs
src/assets/: atlas.rs  gamemap.rs  mod.rs
src/render/: mod.rs  render.rs
src/world/: behaviour.rs  camera.rs  initiator.rs  mod.rs  state.rs
tests/: tests.rs
