[package]
name = "ferari"
version = "1.0.2"
edition = "2021"
description = "Fast Engine for Rendering Axonometric Rust-based Isometry"
authors = ["Rodion Suvorov <rodion.suvorov.94@mail.ru>, Ilhom Kombaev <kombaev02@gmail.com>, Vyacheslav Kochergin <vyacheslav.kochergin1@gmail.com>, Dmitri Kuznetsov <dmitrvlkuznetsov@gmail.com>"]
license = "MIT"
repository = "https://github.com/suvorovrain/Ferari"
readme = "README.md"

[lib]
name = "ferari"
path = "lib.rs"

[dependencies]
minifb = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
crossbeam-channel = "0.5.15"

[dev-dependencies]
